--- a/html/index.html
+++ b/html/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>PlannerApp - PlannerApp</title>
+    <title>Pagina de Ejemplo</title>
     <link rel="stylesheet" href="../css/Boostrapt.css">
     <link rel="stylesheet" href="../css/index.css">
     <link rel="stylesheet" href="../css/normalize.css">
